# delta-rs

./: Cargo.toml
crates/aws/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/delta_spark_connect/: mod.rs
crates/core/src/kernel/models/: schema.rs
crates/core/src/operations/: create.rs  load_cdf.rs  optimize.rs
crates/core/src/operations/merge/: mod.rs
crates/core/src/operations/write/: identity_columns.rs  mod.rs
crates/core/src/table/: columns.rs
crates/deltalake-aws/: Cargo.toml
crates/deltalake-core/: Cargo.toml
crates/deltalake-core/src/operations/: constraints.rs
crates/deltalake-core/src/operations/transaction/: conflict_checker.rs  protocol.rs
crates/derive/src/: lib.rs
crates/spark-connect/: Cargo.toml  build.rs
crates/spark-connect/src/: connect_error.rs  expressions.rs  lib.rs  proto_utils.rs  schema.rs
crates/test/src/acceptance/: data.rs
python/: Cargo.toml
rust/: Cargo.toml
