[package]
name = "deltalake-spark-connect"
version = "0.1.0"
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true

[build-dependencies]
tonic-prost-build = "^0.14"

[dependencies]
thiserror = { workspace = true }
tonic = { version = "^0.14" }
tonic-prost = { version = "^0.14" }
prost = { version = "^0.14" }
prost-types = "^0.14"
bytes = "1"
http = "1"
arrow = { workspace = true, features = ["prettyprint", "chrono-tz"] }
arrow-ipc = { workspace = true }
uuid = { version = "1", features = ["v4"] }
delta_kernel = { version = "0.19", features = ["default-engine-rustls"] }
bon = "3"
datafusion-common = "52"
datafusion-expr = "52"
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tokio = "1"
